samples/_failures_safe/1761258420_79a2c6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a68b132.c: In function ‘handle_done’:
./samples/SAFE/__tmp_1a68b132.c:173:20: error: missing terminating " character
  173 |             printf("Resetting from D
      |                    ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1a68b132.c:173:13: error: expected expression at end of input
  173 |             printf("Resetting from D
      |             ^~~~~~
./samples/SAFE/__tmp_1a68b132.c:173:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1a68b132.c:173:13: error: expected declaration or statement at end of input
